# lmhfe-diffprog

./: .gitignore  .gitmodules  CMakeLists.txt  ConfigTagPermissive.hpp  Domain.hpp  Domain_impl.hpp  Makefile  README.md  mhfe.hpp
bench/: dot.cc  matvec.cc
src/: Domain.hpp  Domain_impl.hpp  LayerManager.hpp  MHFE.hpp  MHFE_impl.hpp
src/math/: csr.xx  dot.xx  gmres.xx  math.xx  matvec.xx  norm.xx  traits.xx
src/mesh/: mesh.xx
src/meshgen/: main.cc
src/mhfe/: findiff.xx  fwddiff.xx  lmhfe.xx  mhfe.xx  problem.xx
src/utils/: aalloc.xx  concepts.xx  prefetch.xx  random.xx  timeit.xx  utils.xx
src/vis/: vis.cc
test/: main.cc  test_utils.xx
test/math/: csr.cc  dot.cc  gmres.cc  matvec.cc  norm.cc
test/mesh/: mesh.cc
test/mhfe/: lmhfe.cc  problem.cc
tests/: domaintest.cpp  layertest.cpp  main.cpp  mhfe.cpp  mhfe.hpp
tools/: env.yml  meshgen.py  preview.py
